Ajustes lançamnto USA

--- a/html/templates/email/account-activation.html
+++ b/html/templates/email/account-activation.html
@@ -3,7 +3,7 @@
 <html lang="{{ LANGUAGE_CODE }}">
 <head>
     <meta charset="UTF-8">
-    <title>{% trans "Vendedor Online Internacional" %}</title>
+    <title>{% trans "My Amazon Partner" %}</title>
 </head>
 <body>
 
