--- a/html/templates/includes/layout.html
+++ b/html/templates/includes/layout.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>{% trans "Vendedor Online Internacional" %} - {{ title }}</title>
+    <title>{% trans "My Amazon Partner" %} - {{ title }}</title>
 
     <!-- Bootstrap -->
     <link href="/static/externo/bootstrap/css/bootstrap.min.css" rel="stylesheet">
