--- a/html/templates/login.html
+++ b/html/templates/login.html
@@ -18,7 +18,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>{% trans "Vendedor Online Internacional" %} - {% trans "Login" %}</title>
+    <title>{% trans "My Amazon Partner" %} - {% trans "Login" %}</title>
 
     <!-- Bootstrap CSS -->
     <link href="/static/externo/bootstrap/css/bootstrap.min.css" rel="stylesheet">
