--- a/html/templates/user_validation.html
+++ b/html/templates/user_validation.html
@@ -10,7 +10,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>{% trans "Vendedor Online Internacional" %} - {% trans "Cadastro" %}</title>
+    <title>{% trans "My Amazon Partner" %} - {% trans "Cadastro" %}</title>
 
     <!-- Bootstrap CSS -->
     <link href="/static/externo/bootstrap/css/bootstrap.min.css" rel="stylesheet">
